# hf-notebooks

./: .gitignore  README.md  pyproject.toml  requirements.txt
course/chapter1/: ema-test.ipynb  section3.ipynb  section8.ipynb
course/chapter2/: section2_pt.ipynb  section3_pt.ipynb
