[tool.pdm]
[tool.pdm.dev-dependencies]
ipykernel = [
    "jupyter>=1.0.0",
    "autopep8>=2.0.2",
    "pylint>=2.17.0",
]
dev = [
    "nbformat>=5.7.3",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Achilleas Voutsas", email = "avoutsas@gmail.com"},
]
dependencies = [
    "transformers>=4.26.1",
    "datasets>=2.10.1",
    "torch>=1.13.1",
    "sentencepiece>=0.1.97",
]
requires-python = ">=3.10"
license = {text = "MIT"}
